--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ header {
   transform: translateX(-50%);
   background: #4e5059dd;
   backdrop-filter: blur(0.5rem);
-  /* z-index: 999999; */
+  z-index: 999999;
   transition: 0.3s;
 }
 
@@ -149,7 +149,7 @@ header {
   top: 11.4rem;
   transition: 0.3s;
   color: #ebebeb;
-  /* z-index: 999999; */
+  z-index: 999999;
 }
 
 .header-gnbwrap:hover .header-lnbwrap {
@@ -200,6 +200,9 @@ section {
 footer {
   width: 100%;
   background: #f0f0f0;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
 }
 .footer-wrap {
   width: 100%;
@@ -218,6 +221,7 @@ footer {
 .footer-fnb {
   display: flex;
   flex-direction: row;
+  margin-bottom: 5rem;
 }
 .footer-fnb a {
   font-size: 1.2rem;
@@ -231,17 +235,8 @@ footer {
 .footer-fnb li:nth-child(1) a {
   font-weight: 500;
 }
-.footer-fnb .fnbmenu::after {
-  content: "";
-  display: inline-block;
-  width: 0.05rem;
-  max-height: 0.8rem;
-  top: 50%;
-  position: relative;
-  transform: translateY(-50%);
-  height: 0.8rem;
-  border-right: 1px solid #999;
-  margin: 1.2rem;
+.footer-fnb .fnbmenu {
+  margin-right: 1rem;
 }
 .footer-contentswrap {
   display: flex;
@@ -265,6 +260,7 @@ footer {
   display: flex;
   flex-direction: row;
   gap: 0.8rem;
+  margin-top: 4rem;
 }
 .footer-contentswrap .footer-sns .snsicon img {
   width: 3.2rem;
@@ -286,6 +282,7 @@ footer {
     display: block;
     width: 100%;
     position: fixed;
+    border: 1px solid red;
   }
   .mobheader-center {
     width: 100%;
@@ -342,27 +339,22 @@ footer {
   }
   .mobheader-gnbwrap {
     width: 100%;
+    height: 100vh;
+    overflow: scroll;
     padding: 0 20px;
-    display: flex;
-    flex-direction: row;
-  }
-  .mobheader-gnb {
     display: flex;
     flex-direction: column;
     background: #fff;
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: 6rem;
     left: 1000px;
-    width: 100%;
-    height: 100vh;
-    text-align: left;
-    margin-top: 60px;
-    padding: 0 10px;
-    box-sizing: border-box;
-    box-shadow: 0, 0, 15px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
   }
-  .mobheader-gnb.active {
+  .mobheader-gnb {
+    width: 100%;
+    padding: 0 10px;
+  }
+  .mobheader-gnbwrap.active {
     left: 0;
   }
   .mobheader-gnb-list {
@@ -370,7 +362,7 @@ footer {
     display: flex;
     flex-direction: column;
     padding-top: 3rem;
-    gap: 2rem;
+    gap: 3rem;
   }
   .gnb-listbox-title {
     width: 100%;
@@ -400,7 +392,7 @@ footer {
     font-size: 1.4rem;
     font-weight: 700;
     line-height: 2.4rem;
-    color: #000;
+    color: #333;
   }
   .gnb-listbox-title .dropicon {
     width: 2rem;
@@ -415,19 +407,53 @@ footer {
     border: 1px solid #ffedc3;
     border-radius: 1.6rem;
     background-color: #fff7e5;
-    margin-top: 0.8rem;
-    margin-left: 1.4rem;
-    margin-right: 1.4rem;
     display: flex;
     flex-direction: column;
-    gap: 1.3rem;
     opacity: 1;
-    max-height: none;
-    padding: 1.6rem 2.4rem;
+    padding: 1rem 2.4rem;
   }
   .gnb-list-detail h2 a {
+    display: inline-block;
+    padding: 0.5rem 0;
     color: #333;
     font-size: 1.4rem;
     font-weight: 500;
+  }
+  .mobheader-snb {
+    width: 100%;
+    padding-top: 2rem;
+  }
+  .mobheader-lnb-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .mobheader-lnb-list li {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.6rem 3.2rem;
+    border: 0.05rem solid #ebebeb;
+    border-radius: 1.6rem;
+    box-shadow: 0, 0.8rem, 2.4rem rgba(0, 0, 0, 0.05);
+  }
+  .mobheader-lnb-list li a {
+    font-size: 1.5rem;
+    font-weight: 400;
+    letter-spacing: -0.025em;
+    line-height: 1;
+    color: #333;
+  }
+  .mobheader-lnb-icon {
+    width: 2rem;
+    height: 2rem;
+    overflow: hidden;
+    filter: grayscale(1);
+    transform: rotate(-90deg);
+  }
+  .mobheader-lnb-icon img {
+    width: 100%;
   }
 }
